enable opsmate controller to create ingress for tasks
