# pkg/api/v1alpha1/docs/v1alpha1_swagger.yaml
@@ -5388,6 +5388,23 @@ definitions:
     type: object
   v1alpha1.EnvironmentBuildSpec:
     properties:
+      ingressAnnotations:
+        additionalProperties:
+          type: string
+        description: |-
+          +kubebuilder:validation:Optional
+          IngressAnnotations are the annotations for the ingress
+        type: object
+      ingressTLS:
+        description: |-
+          +kubebuilder:validation:Optional
+          Whether to use TLS for the ingress
+        type: boolean
+      ingressTargetPort:
+        description: |-
+          +kubebuilder:validation:Optional
+          IngressTargetPort is the service port for the ingress to target
+        type: integer
       service:
         allOf:
         - $ref: '#/definitions/v1.ServiceSpec'
@@ -5443,10 +5460,20 @@ definitions:
           Context is the execution context for the task
           +kubebuilder:validation:Required
         type: string
+      domainName:
+        description: |-
+          DomainName is the domain name for the task ingress
+          +kubebuilder:validation:Optional
+        type: string
       environmentBuildName:
         description: |-
           The environmentBuild that the task will use, must be in the same namespace as the task
           +kubebuilder:validation:Required
+        type: string
+      ingressSecretName:
+        description: |-
+          IngressSecretName is the name of the secret to use for the ingress TLS
+          +kubebuilder:validation:Optional
         type: string
       instruction:
         description: |-
@@ -5480,6 +5507,11 @@ definitions:
         description: |-
           Ingress is the reference to the ingress that is running the task
           +optional
+      ingressDomain:
+        description: |-
+          Ingress Domain
+          +optional
+        type: string
       internalIP:
         description: |-
           Internal IP of the Task Pod
